@@ -92,7 +92,7 @@ parse_key_val (const char **pp, const char *endptr, char **kp, char **vp)
   char  *k, *v;
   int    n, error = 0;
 
-  for (p = *pp ; p < endptr && isspace(*p); p++);
+  for (p = *pp ; p < endptr && isspace((unsigned char)*p); p++);
 #if  0
   while (!error && p < endptr &&
          ((*p >= 'a' && *p <= 'z') ||
@@ -161,18 +161,18 @@ read_html_tag (char *name, pdf_obj *attr, int *type, const char **pp, const char
   const char *p = *pp;
   int    n = 0, error = 0;
 
-  for ( ; p < endptr && isspace(*p); p++);
+  for ( ; p < endptr && isspace((unsigned char)*p); p++);
   if (p >= endptr || *p != '<')
     return  -1;
 
   *type = HTML_TAG_TYPE_OPEN;
-  for (++p; p < endptr && isspace(*p); p++);
+  for (++p; p < endptr && isspace((unsigned char)*p); p++);
   if (p < endptr && *p == '/') {
     *type = HTML_TAG_TYPE_CLOSE;
-    for (++p; p < endptr && isspace(*p); p++);
+    for (++p; p < endptr && isspace((unsigned char)*p); p++);
   }
 
-#define ISDELIM(c) ((c) == '>' || (c) == '/' || isspace(c))
+#define ISDELIM(c) ((c) == '>' || (c) == '/' || isspace((unsigned char)c))
   for (n = 0; p < endptr && n < HTML_TAG_NAME_MAX && !ISDELIM(*p); n++, p++) {
     name[n] = *p;
   } 
@@ -182,7 +182,7 @@ read_html_tag (char *name, pdf_obj *attr, int *type, const char **pp, const char
     return  -1;
   }
 
-  for ( ; p < endptr && isspace(*p); p++);
+  for ( ; p < endptr && isspace((unsigned char)*p); p++);
   while (p < endptr && !error && *p != '/' && *p != '>') {
     char  *kp = NULL, *vp = NULL;
     error = parse_key_val(&p, endptr, &kp, &vp);
@@ -194,7 +194,7 @@ read_html_tag (char *name, pdf_obj *attr, int *type, const char **pp, const char
       RELEASE(kp);
       RELEASE(vp);
     }
-    for ( ; p < endptr && isspace(*p); p++);
+    for ( ; p < endptr && isspace((unsigned char)*p); p++);
   }
   if (error) {
     *pp = p;
@@ -203,7 +203,7 @@ read_html_tag (char *name, pdf_obj *attr, int *type, const char **pp, const char
 
   if (p < endptr && *p == '/') {
     *type = HTML_TAG_TYPE_EMPTY;
-    for (++p; p < endptr && isspace(*p); p++);
+    for (++p; p < endptr && isspace((unsigned char)*p); p++);
   }
   if (p == endptr || *p != '>') {
     *pp = p;
@@ -615,16 +615,16 @@ spc_html__img_empty (struct spc_env *spe, pdf_obj *attr, struct spc_html_ *sd)
   if (obj) {
     const char *p = pdf_string_value(obj);
     pdf_tmatrix  N;
-    for ( ; *p && isspace(*p); p++);
+    for ( ; *p && isspace((unsigned char)*p); p++);
     while (*p && !error) {
       pdf_setmatrix(&N, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0);
       error = cvt_a_to_tmatrix(&N, p, &p);
       if (!error) {
         N.f = -N.f;
         pdf_concatmatrix(&M, &N);
-        for ( ; *p && isspace(*p); p++);
+        for ( ; *p && isspace((unsigned char)*p); p++);
         if (*p == ',')
-          for (++p; *p && isspace(*p); p++);
+          for (++p; *p && isspace((unsigned char)*p); p++);
       }
     }
   }
@@ -751,7 +751,7 @@ spc_handler_html_default (struct spc_env *spe, struct spc_arg *ap)
   }
   pdf_release_obj(attr);
 
-  for ( ; ap->curptr < ap->endptr && isspace(ap->curptr[0]); ap->curptr++);
+  for ( ; ap->curptr < ap->endptr && isspace((unsigned char)ap->curptr[0]); ap->curptr++);
 
   return  error;
 }
@@ -783,7 +783,7 @@ cvt_a_to_tmatrix (pdf_tmatrix *M, const char *ptr, const char **nextptr)
   };
   int          k;
 
-  for ( ; *p && isspace(*p); p++);
+  for ( ; *p && isspace((unsigned char)*p); p++);
 
   q = parse_c_ident(&p, p + strlen(p));
   if (!q)
@@ -793,10 +793,10 @@ cvt_a_to_tmatrix (pdf_tmatrix *M, const char *ptr, const char **nextptr)
   RELEASE(q);
 
   /* handle args */
-  for ( ; *p && isspace(*p); p++);
+  for ( ; *p && isspace((unsigned char)*p); p++);
   if (*p != '(' || *(p + 1) == 0)
     return  -1;
-  for (++p; *p && isspace(*p); p++);
+  for (++p; *p && isspace((unsigned char)*p); p++);
   for (n = 0; n < 6 && *p && *p != ')'; n++) {
     q = parse_float_decimal(&p, p + strlen(p));
     if (!q)
@@ -805,9 +805,9 @@ cvt_a_to_tmatrix (pdf_tmatrix *M, const char *ptr, const char **nextptr)
       v[n] = atof(q);
       if (*p == ',')
         p++;
-      for ( ; *p && isspace(*p); p++);
+      for ( ; *p && isspace((unsigned char)*p); p++);
       if (*p == ',')
-        for (++p; *p && isspace(*p); p++);
+        for (++p; *p && isspace((unsigned char)*p); p++);
       RELEASE(q);
     }
   }
@@ -905,7 +905,7 @@ spc_html_check_special (const char *buffer, long size)
   p      = buffer;
   endptr = p + size;
 
-  for ( ; p < endptr && isspace(*p); p++);
+  for ( ; p < endptr && isspace((unsigned char)*p); p++);
   size   = (long) (endptr - p);
   if (size >= strlen("html:") &&
       !memcmp(p, "html:", strlen("html:"))) {
@@ -922,7 +922,7 @@ spc_html_setup_handler (struct spc_handler *sph,
 {
   ASSERT(sph && spe && ap);
 
-  for ( ; ap->curptr < ap->endptr && isspace(ap->curptr[0]); ap->curptr++);
+  for ( ; ap->curptr < ap->endptr && isspace((unsigned char)ap->curptr[0]); ap->curptr++);
   if (ap->curptr + strlen("html:") > ap->endptr ||
       memcmp(ap->curptr, "html:", strlen("html:"))) {
     return  -1;
@@ -934,7 +934,7 @@ spc_html_setup_handler (struct spc_handler *sph,
   sph->exec   = &spc_handler_html_default;
 
   ap->curptr += strlen("html:");
-  for ( ; ap->curptr < ap->endptr && isspace(ap->curptr[0]); ap->curptr++);
+  for ( ; ap->curptr < ap->endptr && isspace((unsigned char)ap->curptr[0]); ap->curptr++);
 
   return  0;
 }
